tests/error/poly_errors/type_arg_not_droppable.err
Error: Expected a droppable type (at $FILE:19:12)
   | 
17 | @guppy(module)
18 | def main() -> None:
19 |     f = foo[qubit]
   |             ^^^^^ Expected a droppable type, got type `qubit` which is not
   |                   implicitly droppable

Guppy compilation failed due to 1 previous error
